configuring the donate file

--- a/charity-backend/.env
+++ b/charity-backend/.env
@@ -1,5 +1,6 @@
-DARAJA_CONSUMER_KEY=your_consumer_key
-DARAJA_CONSUMER_SECRET=your_consumer_secret
-DARAJA_SHORTCODE=your_shortcode
-DARAJA_PASSKEY=your_passkey
-DARAJA_PARTYB=your_partyb
+CONSUMER_KEY=your_consumer_key
+CONSUMER_SECRET=your_consumer_secret
+MPESA_SHORTCODE=your_shortcode
+MPESA_PASSKEY=your_passkey
+MPESA_ENV=sandbox  # Change to 'production' when ready
+CALLBACK_URL=https://yourdomain.com/callback
